cmake_minimum_required(VERSION 3.5)
project(RDMA_test)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -pthread")
#-W -Wextra -Wall
set(CMAKE_CXX_STANDARD 17)
include_directories($(PROJECT_SOURCE_DIR))
add_executable(RDMA_test_client compute_node.cc rdma.cc)
add_executable(RDMA_test_server server.cc rdma.cc)
#target_link_libraries(RDMA ibverbs)
target_link_libraries(RDMA_test_client ibverbs)
target_link_libraries(RDMA_test_server ibverbs)